<resources>


    <string name="title_activity_bottom_nav">BottomNavActivity</string>
    <string name="title_today">Today</string>
    <string name="title_library">Library</string>
    <string name="title_activity_auth">AuthActivity</string>
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="label_create_account">Create your account!</string>
    <string name="label_step_one">Step One</string>
    <string name="label_user_name">User Name</string>
    <string name="label_password">Password</string>
    <string name="label_repeat_password">Repeat Password</string>
</resources>